[gd_scene format=3 uid="uid://levelup001tscn"]

[ext_resource type="Script" path="res://scripts/ui/LevelUpUI.gd" id="1_levelup"]

[node name="LevelUpUI" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_levelup")

[node name="DimBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.75)
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -155.0
offset_right = 300.0
offset_bottom = 155.0
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="Cards" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 16

[node name="Card0" type="Panel" parent="VBox/Cards"]
layout_mode = 2
custom_minimum_size = Vector2(180, 200)
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="VBox/Cards/Card0"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="VBox/Cards/Card0/VBox"]
layout_mode = 2
text = "Upgrade"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="DescLabel" type="Label" parent="VBox/Cards/Card0/VBox"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 3
size_flags_vertical = 3

[node name="ChooseBtn" type="Button" parent="VBox/Cards/Card0/VBox"]
layout_mode = 2
text = "Choose"

[node name="Card1" type="Panel" parent="VBox/Cards"]
layout_mode = 2
custom_minimum_size = Vector2(180, 200)
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="VBox/Cards/Card1"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="VBox/Cards/Card1/VBox"]
layout_mode = 2
text = "Upgrade"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="DescLabel" type="Label" parent="VBox/Cards/Card1/VBox"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 3
size_flags_vertical = 3

[node name="ChooseBtn" type="Button" parent="VBox/Cards/Card1/VBox"]
layout_mode = 2
text = "Choose"

[node name="Card2" type="Panel" parent="VBox/Cards"]
layout_mode = 2
custom_minimum_size = Vector2(180, 200)
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="VBox/Cards/Card2"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="VBox/Cards/Card2/VBox"]
layout_mode = 2
text = "Upgrade"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="DescLabel" type="Label" parent="VBox/Cards/Card2/VBox"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 3
size_flags_vertical = 3

[node name="ChooseBtn" type="Button" parent="VBox/Cards/Card2/VBox"]
layout_mode = 2
text = "Choose"
